feat: добавить поддержку привязки представлений с использованием ViewBinding в нескольких фрагментах