@@ -4,17 +4,17 @@ import android.os.Bundle;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
-import android.widget.TextView;
 
+import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.fragment.app.Fragment;
 import androidx.recyclerview.widget.LinearLayoutManager;
-import androidx.recyclerview.widget.RecyclerView;
 
-import com.example.meshtastic.R;
 import com.example.meshtastic.data.model.NodeInfo;
 import com.example.meshtastic.data.repository.MeshConnectionRepository;
+import com.example.meshtastic.databinding.FragmentNodesBinding;
 
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -22,33 +22,38 @@ import java.util.List;
  */
 public class NodesFragment extends Fragment {
 
+    private FragmentNodesBinding binding;
     private NodesAdapter adapter;
-    private TextView emptyText;
 
     @Nullable
     @Override
-    public View onCreateView(LayoutInflater inflater, @Nullable ViewGroup container, @Nullable Bundle savedInstanceState) {
-        View view = inflater.inflate(R.layout.fragment_nodes, container, false);
+    public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container, @Nullable Bundle savedInstanceState) {
+        binding = FragmentNodesBinding.inflate(inflater, container, false);
 
-        RecyclerView rv = view.findViewById(R.id.nodes_recycler);
-        emptyText = view.findViewById(R.id.empty_text);
-        rv.setLayoutManager(new LinearLayoutManager(requireContext()));
+        binding.nodesRecycler.setLayoutManager(new LinearLayoutManager(requireContext()));
         adapter = new NodesAdapter();
-        rv.setAdapter(adapter);
+        binding.nodesRecycler.setAdapter(adapter);
 
         MeshConnectionRepository repo = MeshConnectionRepository.getInstance(requireContext());
         repo.getNodes().observe(getViewLifecycleOwner(), this::renderNodes);
 
-        return view;
+        return binding.getRoot();
     }
 
     private void renderNodes(List<NodeInfo> list) {
+        if (binding == null) return;
         if (list == null || list.isEmpty()) {
-            emptyText.setVisibility(View.VISIBLE);
-            adapter.submit(List.of());
+            binding.emptyText.setVisibility(View.VISIBLE);
+            adapter.submitList(Collections.emptyList());
         } else {
-            emptyText.setVisibility(View.GONE);
-            adapter.submit(list);
+            binding.emptyText.setVisibility(View.GONE);
+            adapter.submitList(list);
         }
+    }
+
+    @Override
+    public void onDestroyView() {
+        binding = null;
+        super.onDestroyView();
     }
 }
